# NETDIAG

./: README.md  app.py  network_diagnostics.py  pyproject.toml
attached_assets/: Data UI - Carle Cao.jfif  Pasted-import-platform-import-socket-from-ping3-import-ping-import-psutil-import-speedtest-import-pand-1746440207792.txt
static/css/: style.css
static/js/: charts.js  main.js
templates/: index.html  layout.html
