[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "ping3>=4.0.8",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "speedtest-cli>=2.1.3",
    "speedtest>=0.0.1",
]
